# c-binance-futures-quant

./: pyproject.toml
backends/: common.py  config.py  request.py  server.py  simple.py  simpleTrade.py  webServer.py  wsServer.cpp
backends/afterTrade/: positionRecord.py  tradesUpdate.py  webOssUpdate.py
backends/kernel/: requestclient.py  subscriptionclient.py
backends/kernel/base/: printobject.py  printtime.py
backends/kernel/constant/: system.py
backends/kernel/exception/: binanceapiexception.py
backends/kernel/impl/: restapiinvoker.py  restapirequest.py  restapirequestimpl.py  (+5 more)
backends/keyPy/: binanceOrdersRecord.py  binanceTradesRecord.py  checkTimeoutOrders.py  commission.py  getBinancePosition.py  makerStopLoss.py  positionRisk.py  wsPosition.py
backends/scripts/: oneMinKlineToWs.py  specialOneMinKlineToWs.py  tickToWs.py  uploadDataPy.py  useData.py
backends/updateSymbol/: updateTradeSymbol.py
frontend/config/: common.js
frontend/doc/: doc.MD
futures/: __main__.py  commonFunction.py  config.py  simpleTrade.py  webServer.py
futures/afterTrade/: positionRecord.py  tradesUpdate.py  webOssUpdate.py
futures/binance_f/: requestclient.py  subscriptionclient.py
futures/dataPy/: oneMinKlineToWs.py  specialOneMinKlineToWs.py  tickToWs.py  uploadDataPy.py  useData.py
futures/futures/: requestclient.py  subscriptionclient.py
futures/keyPy/: binanceOrdersRecord.py  binanceTradesRecord.py  checkTimeoutOrders.py  commission.py  getBinancePosition.py  makerStopLoss.py  positionRisk.py  wsPosition.py
futures/updateSymbol/: trade_symbol.sql  updateTradeSymbol.py
(+147 files in other folders)
