[tool.poetry]
name = "futures"
version = "0.1.0"
description = ""
authors = ["bopo <ibopo@126.com>"]
readme = "README.md"
packages = [{include = "futures"}]

[tool.poetry.dependencies]
python = "^3.9"
bottle = "^0.12.25"
requests = "^2.31.0"
dynaconf = "^3.2.0"
click = "^8.1.6"
loguru = "^0.7.0"
aliyunsdkcore = "^1.0.3"
websocket = "^0.2.1"
oss2 = "^2.18.1"
apscheduler = "^3.10.1"


[[tool.poetry.source]]
name = "mirrors"
url = "https://mirrors.ustc.edu.cn/pypi/web/simple"
priority = "primary"


[[tool.poetry.source]]
name = "PyPI"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
