[tool.poetry]
name = "futures"
version = "0.1.0"
description = ""
authors = ["bopo <ibopo@126.com>"]
readme = "README.md"
packages = [{include = "futures"}]

[tool.poetry.dependencies]
python = "^3.9"
bottle = "^0.12.25"
requests = "^2.31.0"
dynaconf = "^3.2.0"
click = "^8.1.6"
loguru = "^0.7.0"
oss2 = "^2.18.1"
apscheduler = "^3.10.1"
aliyun-python-sdk-ecs = "^4.24.64"
pymysql = "^1.1.0"
websocket-client = "^1.6.1"
binance-spot = "^1.0.0.dev0"
paramiko = "^3.3.1"
ccxt = "^4.0.43"
python-binance = "^1.0.17"
fastapi = "^0.100.1"
uvicorn = "^0.23.1"
httpx = "^0.24.1"


[[tool.poetry.source]]
name = "mirrors"
url = "https://mirrors.ustc.edu.cn/pypi/web/simple"
priority = "primary"


[[tool.poetry.source]]
name = "PyPI"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
